--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -145,7 +145,15 @@
   }
 
   .mainContent_img img {
-    max-height: 182px;
+    max-height: 382px;
+  }
+
+  .mainContent_img {
+    flex: 0 0 25%;
+  }
+
+  .mainContent_text {
+    flex-grow: 1;
   }
 }
 
